--- a/index.html
+++ b/index.html
@@ -3,56 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>我的个人简历</title>
+  <title>左嘉欣的个人简历</title>
   <style>
     body { font-family: 'Helvetica Neue', Arial, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif; background: #f8f8f8; margin: 0; padding: 0; }
-    .container { max-width: 700px; margin: 50px auto; background: #fff; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.06); padding: 40px 32px; }
-    h1 { font-size: 2.5em; margin-bottom: 0.2em; }
-    h2 { color: #0072ef; margin-top: 1.5em; }
-    p, li { color: #555; font-size: 1.1em; }
-    .info { margin-bottom: 1em; color: #888; }
+    .container { max-width: 800px; margin: 40px auto; background: #fff; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.06); padding: 40px 32px; }
+    h1 { font-size: 2.6em; margin-bottom: 0.3em; }
+    h2 { color: #0072ef; margin-top: 1.7em; margin-bottom: 0.7em; }
+    p, li { color: #444; font-size: 1.08em; }
+    .info, .contact { margin-bottom: 1em; color: #555; font-size: 1.06em; }
+    .label { color: #666; font-weight: bold; }
     ul { padding-left: 1.3em; }
-    .links a { color: #0072ef; margin-right: 1em; text-decoration: none; }
-    .avatar { float: right; width: 96px; border-radius: 50%; margin-left: 24px; }
+    .links a { color: #0072ef; margin-right: 1.1em; text-decoration: none; }
+    .avatar { float: right; width: 96px; border-radius: 50%; margin-left: 28px; margin-bottom: 16px; }
+    .paper-list { word-break: break-all; }
+    .award-list li { margin-bottom: 0.4em; }
     @media (max-width: 600px) {
-      .container { padding: 16px 6px; }
-      .avatar { float: none; display: block; margin: 0 auto 16px; }
+      .container { padding: 14px 4px; }
+      .avatar { float: none; display: block; margin: 0 auto 18px; }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="https://avatars.githubusercontent.com/u/your-github-id" alt="头像" class="avatar">
-    <h1>你的名字</h1>
-    <div class="info">邮箱：your@email.com | GitHub: <a href="https://github.com/Zuojiaxin1225">Zuojiaxin1225</a></div>
-    <p>一句简短的自我介绍，例如：热爱编程，关注前端与人工智能，乐于学习新技术。</p>
+    <img src="https://avatars.githubusercontent.com/u/Zuojiaxin1225?v=4" alt="头像" class="avatar">
+    <h1>左嘉欣</h1>
+    <div class="contact">
+      <span class="label">联系方式：</span>18099641951 <br>
+      <span class="label">微信：</span>Y1225ZA <br>
+      <span class="label">邮箱：</span><a href="mailto:zuojiaxin@stu.xju.edu.cn">zuojiaxin@stu.xju.edu.cn</a><br>
+      <span class="label">GitHub：</span><a href="https://github.com/Zuojiaxin1225" target="_blank">Zuojiaxin1225</a>
+    </div>
+    <p>
+      新疆大学2024级语言学及应用语言学博士研究生（硕博连读），研究方向：中国少数民族语言（维吾尔语）、阿尔泰语系语言、少数民族语言自然语言处理。
+    </p>
 
     <h2>教育背景</h2>
     <ul>
-      <li>学校名称 - 专业 - 年份</li>
+      <li>新疆大学 - 中国少数民族语言文学（维吾尔语） - 2018-2022年，本科</li>
+      <li>新疆大学 - 中国语言文学（维吾尔语） - 2018-2024年，硕士</li>
+      <li>新疆大学 - 语言学及应用语言学 - 2024级，博士研究生（硕博连读）</li>
     </ul>
 
-    <h2>技能</h2>
+    <h2>实习经历</h2>
     <ul>
-      <li>编程语言/技术1</li>
-      <li>编程语言/技术2</li>
-      <li>...</li>
+      <li>2020-2021年：喀什地区叶城县巴仁乡库勒艾日克村参与驻村工作，使用维吾尔语参与入户走访、疫情防控等工作。</li>
+      <li>2023年9月-2024年6月：喀什地区叶城县第六中学，高二9、10班英语老师。</li>
     </ul>
 
-    <h2>项目/经历</h2>
+    <h2>参与科研项目</h2>
     <ul>
+      <li>数智时代自治区研究生精品示范课程《维吾尔语高级听力》知识图谱的构建与应用研究（XJDX2025YJG18）</li>
+      <li>认知语言学视域下唐诗的维译研究（2024ZHSGYJY-YBO4）</li>
+      <li>新文科背景下自治区级一流本科课程知识图谱的构建与应用研究（XWKJG202415）</li>
+      <li>建设中华民族共有精神家园研究 (2022-GMH-012)</li>
+    </ul>
+
+    <h2>发表论文</h2>
+    <ul class="paper-list">
       <li>
-        <b>项目名称</b>：简要描述项目内容和你的贡献。
+        左嘉欣, 李圃. 维吾尔语专业学生语言实习现状调查与有效途径探索[J]. 教育进展, 2023, 13(12): 9963-9971.
+        <a href="https://doi.org/10.12677/AE.2023.13121540" target="_blank">https://doi.org/10.12677/AE.2023.13121540</a>
       </li>
-      <!-- 可继续添加更多项目 -->
+      <li>
+        左嘉欣. 维吾尔语委婉语浅析[J]. 现代语言学, 2023, 11(12): 5978-5983.
+        <a href="https://doi.org/10.12677/ML.2023.1112801" target="_blank">https://doi.org/10.12677/ML.2023.1112801</a>
+      </li>
+      <li>
+        左嘉欣, 夏迪娅·伊布拉音. 量化分析视角下知识图谱在课程中的建设与应用[J]. 数字技术与应用, 2025.07.
+      </li>
     </ul>
 
-    <h2>联系方式</h2>
-    <div class="links">
-      <a href="mailto:your@email.com">Email</a>
-      <a href="https://github.com/Zuojiaxin1225">GitHub</a>
-      <!-- 可加微信/博客/LinkedIn等 -->
-    </div>
+    <h2>获奖情况</h2>
+    <ul class="award-list">
+      <li>2021年6月：叶城县巴仁乡库勒艾日克村2020-2021学年驻村实习“优秀实习生”</li>
+      <li>2021年12月20日：2020至2021学年新疆维吾尔自治区教育厅国家励志奖学金</li>
+      <li>2022年6月2日：中国语言文学学院维吾尔语专业口语技能竞赛“火箭组”三等奖</li>
+      <li>2022年12月1日：新疆大学2022至2023学年研究生自治区学业奖学金</li>
+      <li>2023年10月6日：新疆维吾尔自治区教育厅2023至2024学年自治区奖学金</li>
+      <li>2024年6月24日：叶城县第六中学“优秀实习教师”</li>
+      <li>2024年11月6日：新疆大学2024至2025学年研究生自治区学业奖学金</li>
+      <li>2024年11月27日：获评“博士生党支部学习标兵”</li>
+    </ul>
   </div>
 </body>
 </html>
