--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       position: relative; 
       overflow: hidden;
     }
+    <img src="files/b3744501b259e983c9b8055a60aae554.jpg" alt="" class="avatar-id">
     .avatar-id { 
       position: absolute; 
       top: 32px; 
