--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>左嘉欣的个人简历</title>
   <style>
-    body { font-family: 'Helvetica Neue', Arial, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif; background: #f8f8f8; margin: 0; padding: 0; }
+    body { 
+      font-family: 'Helvetica Neue', Arial, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif; 
+      background: #f8f8f8; 
+      margin: 0; 
+      padding: 0; 
+    }
     .container { 
       max-width: 800px; 
       margin: 40px auto; 
@@ -16,12 +21,11 @@
       position: relative; 
       overflow: hidden;
     }
-    <img src="files/b3744501b259e983c9b8055a60aae554.jpg" alt="" class="avatar-id">
     .avatar-id { 
       position: absolute; 
       top: 32px; 
       right: 32px; 
-      width: 120px; 
+      width: 90px;       /* 修改为合适大小 */
       border-radius: 8px; 
       box-shadow: 0 2px 12px rgba(0,0,0,0.08);
       object-fit: cover;
@@ -38,14 +42,19 @@
     .award-list li { margin-bottom: 0.4em; }
     @media (max-width: 600px) {
       .container { padding: 14px 4px; }
-      .avatar-id { position: static; display: block; margin: 0 auto 12px auto; width: 60%; }
+      .avatar-id { 
+        position: static; 
+        display: block; 
+        margin: 0 auto 12px auto; 
+        width: 60%; 
+      }
       h1 { text-align: center; }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="b3744501b259e983c9b8055a60aae554.jpg" alt="" class="avatar-id">
+    <img src="files/b3744501b259e983c9b8055a60aae554.jpg" alt="左嘉欣头像" class="avatar-id">
     <h1>左嘉欣</h1>
     <div class="contact">
       <span class="label">联系方式：</span>18099641951 <br>
