--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       position: absolute; 
       top: 32px; 
       right: 32px; 
-      width: 90px;       /* 修改为合适大小 */
+      width: 90px;       
       border-radius: 8px; 
       box-shadow: 0 2px 12px rgba(0,0,0,0.08);
       object-fit: cover;
@@ -46,7 +46,7 @@
         position: static; 
         display: block; 
         margin: 0 auto 12px auto; 
-        width: 60%; 
+        width: 40%; 
       }
       h1 { text-align: center; }
     }
