--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="files/b3744501b259e983c9b8055a60aae554.jpg" alt="左嘉欣头像" class="avatar-id">
+   <img src="b3744501b259e983c9b8055a60aae554.jpg" alt="左嘉欣" class="avatar-id"> 
     <h1>左嘉欣</h1>
     <div class="contact">
       <span class="label">联系方式：</span>18099641951 <br>
