--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
       <span class="label">GitHub：</span><a href="https://github.com/Zuojiaxin1225" target="_blank">Zuojiaxin1225</a>
     </div>
     <p>
-      新疆大学2024级语言学及应用语言学博士研究生（硕博连读），研究方向：中国少数民族语言（维吾尔语）、阿尔泰语系语言、少数民族语言自然语言处理。
+      左嘉欣，女，中共党员，新疆大学2024级语言学及应用语言学博士研究生（硕博连读），研究方向：中国少数民族语言（维吾尔语）、阿尔泰语系语言、少数民族语言自然语言处理。
     </p>
 
     <h2>教育背景</h2>
     <ul>
       <li>新疆大学 - 中国少数民族语言文学（维吾尔语） - 2018-2022年，本科</li>
-      <li>新疆大学 - 中国语言文学（维吾尔语） - 2018-2024年，硕士</li>
+      <li>新疆大学 - 中国语言文学（维吾尔语） - 2022-2024年，硕士</li>
       <li>新疆大学 - 语言学及应用语言学 - 2024级，博士研究生（硕博连读）</li>
     </ul>
 
     <h2>实习经历</h2>
     <ul>
-      <li>2020-2021年：喀什地区叶城县巴仁乡库勒艾日克村参与驻村工作，使用维吾尔语参与入户走访、疫情防控等工作。</li>
-      <li>2023年9月-2024年6月：喀什地区叶城县第六中学，高二9、10班英语老师。</li>
+      <li>20209月-2021年9月：喀什地区叶城县巴仁乡库勒艾日克村参与驻村工作，使用维吾尔语参与入户走访、疫情防控等工作；</li>
+      <li>2023年9月-2024年6月：喀什地区叶城县第六中学担任高二（9）班、高二（10）班英语老师</li>
     </ul>
 
     <h2>参与科研项目</h2>
@@ -84,6 +84,7 @@
       <li>数智时代自治区研究生精品示范课程《维吾尔语高级听力》知识图谱的构建与应用研究（XJDX2025YJG18）</li>
       <li>认知语言学视域下唐诗的维译研究（2024ZHSGYJY-YBO4）</li>
       <li>新文科背景下自治区级一流本科课程知识图谱的构建与应用研究（XWKJG202415）</li>
+       <li>以提升语言交际能力为核心的“民汉双翻人才”培养模式改革与实践探索(XJU-2021JG06)</li>
       <li>建设中华民族共有精神家园研究 (2022-GMH-012)</li>
     </ul>
 
