--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <span class="label">GitHub：</span><a href="https://github.com/Zuojiaxin1225" target="_blank">Zuojiaxin1225</a>
     </div>
     <p>
-      左嘉欣，女，中共党员，新疆大学2024级语言学及应用语言学博士研究生（硕博连读），研究方向：中国少数民族语言（维吾尔语）、阿尔泰语系语言、少数民族语言自然语言处理。
+      左嘉欣（2000-），女，中共党员，新疆大学2024级语言学及应用语言学博士研究生（硕博连读），研究方向：中国少数民族语言（维吾尔语）、阿尔泰语系语言、少数民族语言自然语言处理。
     </p>
 
     <h2>教育背景</h2>
